# datavault_assistant

./: .env  .gitignore  README.md  pyproject.toml  vietin_note.txt
datavault_assistant/: gradio_sample.py  main.py  run.py  toantt_parsing_datavault.py  toantt_run.py  toantt_store_metadata.py  toantt_test.py
datavault_assistant/agents/: data_vault_builder.py  metadata_analyzer.py
datavault_assistant/api/controllers/: metadata_controller.py
datavault_assistant/api/routes/: metadata.py
datavault_assistant/api/services/: metadata_controller.py  metadata_service.py
datavault_assistant/configs/: settings.py
datavault_assistant/core/agents/: metadata_creator.sql  yaml_parser.py
datavault_assistant/core/metadata/: erd_lineage_creator.py  metadata_creator.sql  parser.py  (+2 more)
datavault_assistant/data/: hub_link.json  hub_sample.json  metadata_result.json  sat_lsat.json  test_dv_autovault.xlsx
datavault_assistant/utils/: llm.py  metadata_reader.py  metadata_src.csv
output/: hub_address_metadata.yaml  hub_contact_metadata.yaml  hub_customer_metadata.yaml  hub_risk_profile_metadata.yaml  lnk_customer_address_metadata.yaml  lnk_customer_contact_metadata.yaml  lnk_customer_risk_profile_metadata.yaml  lsat_customer_address_details_metadata.yaml  lsat_customer_contact_details_metadata.yaml  lsat_customer_risk_profile_details_metadata.yaml  processing_hub_summary.yaml  processing_link_summary.yaml  processing_lsat_summary.yaml  processing_sat_summary.yaml  sat_address_details_metadata.yaml  sat_contact_details_metadata.yaml  sat_customer_details_metadata.yaml  sat_risk_profile_details_metadata.yaml
tests/: conftest.py  test_data_processor.py  test_file_processor.py  test_hub_result.py
tests/test_data/: metadata_src.csv
(+23 files in other folders)
