[tool.poetry]
name = "datavault-assistant"
version = "0.1.0"
description = ""
authors = ["toantt <toantt@katalyst.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.13"
langgraph = "^0.2.60"
pandas = "^2.2.3"
langchain-community = "^0.3.13"
langchain-ollama = "^0.2.2"
langchain-groq = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
